add backToTop btn

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Trickle Creek Ranch</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -95,7 +95,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Red Lifeguard Stand</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -107,7 +107,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Trickle Creek Ranch</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -119,7 +119,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Red Lifeguard Stand</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -131,7 +131,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Trickle Creek Ranch</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -143,7 +143,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Red Lifeguard Stand</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -155,7 +155,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Trickle Creek Ranch</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -167,7 +167,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>The Tree House</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -179,7 +179,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Trickle Creek Ranch</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -191,7 +191,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Kindred Spirits Cabin</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -203,7 +203,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Trickle Creek Ranch</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -215,7 +215,7 @@
             <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
-        <span class="destination-price">$36/night</span>
+        <span class="destination-price">kr36/night</span>
         <h3>Dragonfly Tiny Cabin</h3>
         <p>Book unique camping experiences on over 300,000 campsites.</p>
         <button class="readMore-btn">Read More</button>
@@ -243,6 +243,9 @@
       </div>
       <img src="image/camp-icon.svg" alt="Camp icon" class="contactUs-image" />
     </div>
+    <button class="backToTop-btn">
+      <img src="image/arrow-top.svg" alt="back to top">
+    </button>
     <footer>
       <div class="footer-items-container">
         <div class="footer-item">
