add destination filter UI

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
       <img src="image/map-icon.svg" alt="destinations-icon" />
       <h2>Explore Destinations & Activities</h2>
     </div>
+    <div class="filter-destinations">
+      <div class="title">Filter Destinations</div>
+      <button type="button" class="cheap">Cheap</button>
+      <button type="button" class="normal">Normal</button>
+      <button type="button" class="expensive">Expensive</button>
+    </div>
     <div class="destinations-container">
     
     </div>
