add filter scripts

--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
     </div>
     <div class="filter-destinations">
       <div class="title">Filter Destinations</div>
-      <button type="button" class="cheap">Cheap</button>
-      <button type="button" class="normal">Normal</button>
-      <button type="button" class="expensive">Expensive</button>
+      <div>
+
+        <button type="button" class="cheap">Cheap</button>
+        <button type="button" class="normal">Normal</button>
+        <button type="button" class="expensive">Expensive</button>
+        <button type="button" class="all">All</button>
+      </div>
     </div>
     <div class="destinations-container">
     
