add email validator to input

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           delivered right to your inbox.
         </p>
         <form action="#">
-          <input type="email" name="email" id="sendEmail-input"  placeholder="Email Address"  />
+          <input type="email" class="checkable-email" name="email" id="sendEmail-input"  placeholder="Email Address"  />
           <button type="submit" class="sendEmail-btn">
             <img src="image/send-message-icon.svg" alt="send"/>
           </button>
